# altoro_api_tests

./: .gitignore  README.md  config.py  pyproject.toml  pytest.ini
altoro_api_tests/schemas/: feedback_response.json  successful_login_response.json
altoro_api_tests/utils/: allure_marks.py  api_functions.py
qa_guru_diploma_altoro_api/allure-results/: 5668df6f-f90b-45e0-93bf-2fbad400ddcd-result.json
qa_guru_diploma_altoro_api/data/: users.py
qa_guru_diploma_altoro_api/utils/: api_functions.py  api_methods.py  attach.py  logging_attaching_methods.py
qa_guru_diploma_automationexercise_api/schemas/: loggedin.json
qa_guru_diploma_automationexercise_api/utils/: api_methods.py
tests/: conftest.py  test_automationexercise.py
tests/api/: conftest.py  test_admin.py  test_feedback.py  test_login.py
tests/api/allure-results/: 1558e9ba-f282-4aee-8e0a-0f4f3453c4f7-result.json  158699bf-155a-4aae-8099-1dbc9f8cc105-result.json  24d4b0da-31ff-4d77-8f69-ceb042de6e16-attachment.txt  3385fc83-47a2-4daa-9130-d9be172ac929-attachment.json  47204e9d-d549-4869-943c-8805b244a0e7-attachment.txt  66926c5f-b0d4-4d5e-8576-62b77fd6f303-attachment.json  7411a9b0-b54b-47d5-86fc-9821f5ae5344-result.json  88feb9a6-6544-44af-a98f-41043acb6ebf-result.json  95628942-9ee9-490c-8f9f-a8bfe1ee4b4b-result.json  cd72189f-470a-4ff0-8177-23174007fd92-attachment.txt  e297d393-b605-4844-81b4-3be522c5878d-attachment.txt  e6e1dccb-21f2-478e-ab61-ba1fc4e8912a-attachment.txt  f453b161-74c8-4f27-bb53-aa8273fbb15c-attachment.txt  (+2 more)
tests/ui/: conftest.py  test_customize_language.py  test_logout.py
(+9 files in other folders)
